--- a/index.html
+++ b/index.html
@@ -2,114 +2,36 @@
 <html lang="es">
 <head>
     <meta charset="utf-8">
-    <title>HUD SA</title>
+    <title>HUD Mapa Pro - GPS & Radio SA</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
-
     <script src='https://unpkg.com/maplibre-gl@latest/dist/maplibre-gl.js'></script>
     <link href='https://unpkg.com/maplibre-gl@latest/dist/maplibre-gl.css' rel='stylesheet' />
-
     <style>
-        :root {
-            --hud-size: 85vw;
-            --max-size: 550px;
-            --gta-yellow: #f9ca24;
-        }
-
-        body {
-            margin: 0;
-            background: #1a3315; 
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            font-family: 'Segoe UI', Arial, sans-serif;
-            overflow: hidden;
-            touch-action: none;
-        }
-
-        /* Pantalla de inicio crítica para sensores y audio */
+        :root { --hud-size: 85vw; --max-size: 550px; --gta-yellow: #f9ca24; }
+        body { margin: 0; background: #1a3315; display: flex; justify-content: center; align-items: center; height: 100vh; font-family: sans-serif; overflow: hidden; touch-action: none; }
+        
+        /* Pantalla de inicio con prioridad máxima */
         #start-overlay {
-            position: fixed;
-            top: 0; left: 0; width: 100%; height: 100%;
-            background: #000;
-            z-index: 9999;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            color: white;
-            text-align: center;
+            position: fixed; top: 0; left: 0; width: 100%; height: 100%;
+            background: #000; z-index: 99999; display: flex; flex-direction: column;
+            justify-content: center; align-items: center; color: white;
         }
-
         #start-btn {
-            background: var(--gta-yellow);
-            color: black;
-            border: 4px solid #fff;
-            padding: 20px 50px;
-            font-size: 1.8rem;
-            font-weight: bold;
-            border-radius: 10px;
-            cursor: pointer;
-            font-family: 'Arial Black', sans-serif;
-            box-shadow: 0 0 20px rgba(249, 202, 36, 0.5);
-            margin-top: 20px;
+            background: var(--gta-yellow); color: black; border: 4px solid #fff;
+            padding: 20px 50px; font-size: 1.8rem; font-weight: bold; border-radius: 10px;
+            cursor: pointer; font-family: 'Arial Black', sans-serif;
         }
 
-        #wrapper {
-            position: relative;
-            width: var(--hud-size);
-            height: var(--hud-size);
-            max-width: var(--max-size);
-            max-height: var(--max-size);
-            visibility: hidden; 
-        }
-
-        #hud {
-            position: absolute;
-            width: 100%; height: 100%;
-            border-radius: 50%;
-            border: calc(var(--hud-size) * 0.015) solid black;
-            overflow: hidden;
-            background: #38692d;
-            box-shadow: 0 10px 40px rgba(0,0,0,0.5);
-            z-index: 1;
-        }
-
+        #wrapper { position: relative; width: var(--hud-size); height: var(--hud-size); max-width: var(--max-size); max-height: var(--max-size); display: none; }
+        #hud { position: absolute; width: 100%; height: 100%; border-radius: 50%; border: 6px solid black; overflow: hidden; background: #38692d; z-index: 1; }
         #map { position: absolute; width: 100%; height: 100%; }
-
-        #player {
-            position: absolute;
-            top: 50%; left: 50%;
-            width: 35px; height: 35px;
-            transform: translate(-50%, -50%) rotate(180deg);
-            z-index: 10;
-            filter: drop-shadow(0 2px 4px rgba(0,0,0,0.8));
-        }
-
-        #radio-ui {
-            position: absolute;
-            top: 50%; left: 50%;
-            transform: translate(-50%, -50%) scale(0.7);
-            width: 100%; height: 100%;
-            background: radial-gradient(circle, rgba(0,0,0,0.96) 20%, rgba(0,0,0,0.7) 80%);
-            border-radius: 50%;
-            z-index: 100;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            opacity: 0;
-            pointer-events: none;
-            transition: 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-            border: 4px solid var(--gta-yellow);
-        }
-
+        #player { position: absolute; top: 50%; left: 50%; width: 35px; height: 35px; transform: translate(-50%, -50%) rotate(180deg); z-index: 10; filter: drop-shadow(0 2px 4px rgba(0,0,0,0.8)); }
+        #radio-ui { position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%) scale(0.7); width: 100%; height: 100%; background: radial-gradient(circle, rgba(0,0,0,0.95) 20%, rgba(0,0,0,0.7) 80%); border-radius: 50%; z-index: 100; display: flex; flex-direction: column; justify-content: center; align-items: center; opacity: 0; pointer-events: none; transition: 0.3s; border: 4px solid var(--gta-yellow); }
         #radio-ui.active { opacity: 1; transform: translate(-50%, -50%) scale(1); }
-        .station-icon-radial { position: absolute; width: 45px; height: 45px; transform: translate(-50%, -50%); filter: grayscale(1) opacity(0.4); transition: 0.2s; }
+        .station-icon-radial { position: absolute; width: 45px; height: 45px; transform: translate(-50%, -50%); filter: grayscale(1) opacity(0.4); }
         .station-icon-radial.highlight { filter: grayscale(0) opacity(1); transform: translate(-50%, -50%) scale(1.4); }
-        #station-logo { width: 110px; height: 110px; object-fit: contain; }
-        #station-name { color: var(--gta-yellow); font-size: 1.1rem; text-transform: uppercase; margin-top: 10px; text-shadow: 2px 2px 0px black; font-family: 'Arial Black'; text-align: center; max-width: 80%; }
-
+        #station-logo { width: 100px; height: 100px; object-fit: contain; }
+        #station-name { color: var(--gta-yellow); font-size: 1rem; text-transform: uppercase; margin-top: 10px; text-shadow: 2px 2px 0px black; text-align: center; }
         #north-orbit { position: absolute; width: 100%; height: 100%; z-index: 20; pointer-events: none; }
         #north { position: absolute; top: 0; left: 50%; transform: translate(-50%, -50%); background: black; color: white; font-weight: bold; padding: 5px 15px; border-radius: 50px; }
     </style>
@@ -117,9 +39,8 @@
 <body>
 
 <div id="start-overlay">
-    <h1 style="font-family: 'Arial Black'; color: #f9ca24; margin: 0;">SAN ANDREAS</h1>
-    <p style="margin: 5px 0 20px 0;">SISTEMA GPS Y RADIO</p>
-    <button id="start-btn">INICIAR</button>
+    <h1 style="color: #f9ca24;">SAN ANDREAS</h1>
+    <button id="start-btn">INICIAR GPS</button>
 </div>
 
 <div id="wrapper">
@@ -141,20 +62,11 @@
 <audio id="menu-sfx" src="img/gta-sa-menu.mp3"></audio>
 
 <script>
-// --- 1. CONFIGURACIÓN DE MAPA (COLORES) ---
 const paleta = { agua: '#7088b0', tierra: '#38692d', edificios: '#FFFFFF', calles: '#000000', senderos: '#A78C6A' };
-const map = new maplibregl.Map({ 
-    container: 'map', 
-    style: 'https://tiles.openfreemap.org/styles/bright', 
-    center: [-70.6483, -33.4569], 
-    zoom: 18, 
-    attributionControl: false, 
-    interactive: false 
-});
+const map = new maplibregl.Map({ container: 'map', style: 'https://tiles.openfreemap.org/styles/bright', center: [-70.6483, -33.4569], zoom: 18, attributionControl: false, interactive: false });
 
 map.on('style.load', () => {
     map.setPaintProperty('background', 'background-color', paleta.tierra);
-    if (map.getLayer('building')) { map.setPaintProperty('building', 'fill-color', paleta.edificios); map.setPaintProperty('building', 'fill-outline-color', '#000000'); }
     map.getStyle().layers.forEach(layer => {
         if (layer.id.includes('water')) map.setPaintProperty(layer.id, 'fill-color', paleta.agua);
         if (layer.id.includes('park') || layer.id.includes('landuse')) map.setPaintProperty(layer.id, 'fill-color', paleta.tierra);
@@ -166,126 +78,59 @@ map.on('style.load', () => {
     });
 });
 
-// --- 2. DATOS DE LA RADIO ---
+// --- RADIO ---
 const stations = [
     { name: "Radio Off", logo: "img/RadioOff.png", file: "", duration: 0 },
     { name: "Bounce FM", logo: "img/BounceFM.png", file: "https://www.dropbox.com/scl/fi/ca7wu3m85r58rgbv9pd7g/Bounce-FM.ogg?rlkey=v7qw43n1h981dcomxfjpve96v&st=5gx1zfuf&raw=1", duration: 3902 },
-    { name: "CSR 103.9", logo: "img/CSR1039.png", file: "https://www.dropbox.com/scl/fi/fpdmf6o39nbadvw137au1/CSR-103.9.ogg?rlkey=rx77lkc6nhbujzgna49ctl9q9&st=89cquejz&raw=1", duration: 2844 },
     { name: "K-DST", logo: "img/K-DST.png", file: "https://www.dropbox.com/scl/fi/oosqrvx814k1e3cc5tgup/K-DST.ogg?rlkey=fvf1umkp0y16c1it3n04v2ixx&st=37bzczhr&raw=1", duration: 4001 },
-    { name: "K-JAH West", logo: "img/KJAHWest.png", file: "https://www.dropbox.com/scl/fi/bke95j1p5xoph0li70xm/K-JAH-West.ogg?rlkey=t0x395wzoo3s1slyvmtb364x3&st=p4861lcp&raw=1", duration: 3633 },
     { name: "K-Rose", logo: "img/K-Rose.png", file: "https://www.dropbox.com/scl/fi/9rqncuwg57ytnhxgogxhw/K-Rose.ogg?rlkey=stkyv5gbrzgg16g1o020j0r8u&st=g5hmzkx2&raw=1", duration: 2886 },
-    { name: "Master Sounds 98.3", logo: "img/MasterSounds983.png", file: "https://www.dropbox.com/scl/fi/1vgwoli2ml2u7i24ft643/Master-Sounds-98.3.ogg?rlkey=bd1gph4a2wnqkc6nsq2p0x2sp&st=waoj51bo&raw=1", duration: 4061 },
-    { name: "Playback FM", logo: "img/PlaybackFM.png", file: "https://www.dropbox.com/scl/fi/5c15ncg6pjxwfr8ls0dga/Playback-FM.ogg?rlkey=aygen0ilmxtmg3oppbnpb633f&st=lvhvgtw6&raw=1", duration: 2810 },
-    { name: "Radio Los Santos", logo: "img/RadioLosSantos.png", file: "https://www.dropbox.com/scl/fi/sinj8ub6wcg6t6sly5upa/Radio-Los-Santos.ogg?rlkey=mil43l09kuhu1fjpj8pl8llfz&st=54uerjxk&raw=1", duration: 3863 },
-    { name: "Radio X", logo: "img/RadioX.png", file: "https://www.dropbox.com/scl/fi/4rvm9go6hrz96wqdh3lpg/Radio-X.ogg?rlkey=c9sy9p84hng643ci46preq4pl&st=vv0zqu8r&raw=1", duration: 3469 },
-    { name: "SF-UR", logo: "img/SFUR.png", file: "https://www.dropbox.com/scl/fi/plk0bquq892pau0h06xk5/SF-UR.ogg?rlkey=6hz4lfd7f4e6axvmtdh3hdsrp&st=vs46r7j9&raw=1", duration: 3973 },
-    { name: "WCTR", logo: "img/WCTR.png", file: "https://www.dropbox.com/scl/fi/zl5jqlhy132qsunbd47o4/West-Coast-Talk-Radio.ogg?rlkey=4400rfyv0cpdvhtzp8o2bflep&st=jmf3rrvk&raw=1", duration: 6599 }
+    { name: "Radio Los Santos", logo: "img/RadioLosSantos.png", file: "https://www.dropbox.com/scl/fi/sinj8ub6wcg6t6sly5upa/Radio-Los-Santos.ogg?rlkey=mil43l09kuhu1fjpj8pl8llfz&st=54uerjxk&raw=1", duration: 3863 }
 ];
 
-let currentIdx = 0, tempIdx = 0, isHolding = false, holdTimer, lastClickTime = 0, hideTimeout;
+let currentIdx = 0, tempIdx = 0, isHolding = false;
 const radioUi = document.getElementById('radio-ui'), audio = document.getElementById('radio-audio');
-const staticSfx = document.getElementById('static-sfx'), menuSfx = document.getElementById('menu-sfx');
 
 stations.forEach((s, i) => {
     const angle = (i / stations.length) * Math.PI * 2 - Math.PI / 2;
-    const x = 50 + Math.cos(angle) * 38;
-    const y = 50 + Math.sin(angle) * 38;
+    const x = 50 + Math.cos(angle) * 38; const y = 50 + Math.sin(angle) * 38;
     const icon = document.createElement('img');
     icon.src = s.logo; icon.className = 'station-icon-radial'; icon.id = `rad-${i}`;
     icon.style.left = `${x}%`; icon.style.top = `${y}%`;
     radioUi.appendChild(icon);
 });
 
-function applyStation(idx) {
-    currentIdx = idx; const s = stations[currentIdx]; audio.pause();
-    if (s.file) {
-        audio.src = s.file;
-        audio.onloadedmetadata = () => { audio.currentTime = Math.floor(Date.now() / 1000) % s.duration; audio.play().catch(()=>{}); };
-        audio.load();
-    } else { audio.src = ""; }
-}
+// --- INICIO FORZADO ---
+document.getElementById('start-btn').onclick = async function() {
+    // ESTO QUITA LA PANTALLA SÍ O SÍ
+    document.getElementById('start-overlay').remove();
+    document.getElementById('wrapper').style.display = 'block';
+    
+    // Intentar GPS
+    navigator.geolocation.watchPosition(pos => {
+        map.easeTo({ center: [pos.coords.longitude, pos.coords.latitude], duration: 1000 });
+    }, (e) => console.log("GPS bloqueado"), { enableHighAccuracy: true });
 
-function updateSelection(idx) {
-    tempIdx = idx;
-    document.getElementById('station-logo').src = stations[idx].logo;
-    document.getElementById('station-name').innerText = stations[idx].name;
-    document.querySelectorAll('.station-icon-radial').forEach(el => el.classList.remove('highlight'));
-    document.getElementById(`rad-${idx}`).classList.add('highlight');
-    staticSfx.currentTime = 0; staticSfx.play();
-}
-
-// --- 3. LÓGICA GPS Y SENSORES ---
-let smoothLat = null, smoothLng = null;
-const smoothing = 0.2;
-
-document.getElementById('start-btn').addEventListener('click', async function() {
-    document.getElementById('start-overlay').style.display = 'none';
-    document.getElementById('wrapper').style.visibility = 'visible';
-    menuSfx.play().catch(()=>{});
-    if ('wakeLock' in navigator) navigator.wakeLock.request('screen').catch(()=>{});
-
-    if (navigator.geolocation) {
-        navigator.geolocation.watchPosition(pos => {
-            const { latitude, longitude } = pos.coords;
-            if (smoothLat === null) { smoothLat = latitude; smoothLng = longitude; }
-            else { smoothLat = smoothLat * (1-smoothing) + latitude * smoothing; smoothLng = smoothLng * (1-smoothing) + longitude * smoothing; }
-            map.easeTo({ center: [smoothLng, smoothLat], duration: 1000 });
-        }, null, { enableHighAccuracy: true });
+    // Intentar Brújula (solo si el navegador deja)
+    if (window.DeviceOrientationEvent && DeviceOrientationEvent.requestPermission) {
+        DeviceOrientationEvent.requestPermission().catch(e => console.log(e));
     }
-
-    const handleOrient = (e) => {
+    window.addEventListener('deviceorientation', (e) => {
         let heading = e.webkitCompassHeading || (e.alpha ? 360 - e.alpha : 0);
         map.setBearing(heading);
         document.getElementById('north-orbit').style.transform = `rotate(${-heading}deg)`;
-    };
+    });
+};
 
-    if (typeof DeviceOrientationEvent !== 'undefined' && typeof DeviceOrientationEvent.requestPermission === 'function') {
-        const res = await DeviceOrientationEvent.requestPermission();
-        if (res === 'granted') window.addEventListener('deviceorientation', handleOrient);
-    } else { window.addEventListener('deviceorientation', handleOrient); }
-});
-
-// --- 4. EVENTOS DE INTERACCIÓN (TOUCH/RADIO) ---
+// --- CONTROLES RADIO ---
 const handleStart = (e) => {
-    if(e.cancelable) e.preventDefault();
-    clearTimeout(hideTimeout);
-    menuSfx.currentTime = 0; menuSfx.play().catch(()=>{});
-    holdTimer = setTimeout(() => { isHolding = true; tempIdx = currentIdx; radioUi.classList.add('active'); updateSelection(currentIdx); }, 400);
+    isHolding = true; 
+    setTimeout(() => { if(isHolding) radioUi.classList.add('active'); }, 500);
 };
-
-const handleMove = (e) => {
-    if (!isHolding) return;
-    const touch = e.touches ? e.touches[0] : e;
-    const rect = radioUi.getBoundingClientRect();
-    const centerX = rect.left + rect.width / 2, centerY = rect.top + rect.height / 2;
-    const angle = Math.atan2(touch.clientY - centerY, touch.clientX - centerX) + Math.PI / 2;
-    const index = Math.round(((angle < 0 ? angle + Math.PI * 2 : angle) / (Math.PI * 2)) * stations.length) % stations.length;
-    if (index !== tempIdx) updateSelection(index);
-};
-
 const handleEnd = () => {
-    clearTimeout(holdTimer);
-    if (isHolding) { 
-        applyStation(tempIdx); 
-        hideTimeout = setTimeout(() => radioUi.classList.remove('active'), 1200); 
-        isHolding = false; 
-    } else {
-        const now = Date.now();
-        if (now - lastClickTime < 300) {
-            let next = (currentIdx + 1) % stations.length;
-            radioUi.classList.add('active'); updateSelection(next); applyStation(next);
-            hideTimeout = setTimeout(() => radioUi.classList.remove('active'), 1500);
-        }
-        lastClickTime = now;
-    }
+    isHolding = false; radioUi.classList.remove('active');
 };
-
-window.addEventListener('touchstart', handleStart, {passive: false});
-window.addEventListener('touchmove', handleMove, {passive: false});
+window.addEventListener('touchstart', handleStart);
 window.addEventListener('touchend', handleEnd);
-window.addEventListener('mousedown', handleStart);
-window.addEventListener('mousemove', handleMove);
-window.addEventListener('mouseup', handleEnd);
 </script>
 </body>
 </html>
