--- a/index.html
+++ b/index.html
@@ -2,12 +2,10 @@
 <html lang="es">
 <head>
     <meta charset="utf-8">
-    <title>HUD Mapa Pro - Estilo SA</title>
+    <title>HUD GPS & Radio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
-    
     <script src='https://unpkg.com/maplibre-gl@latest/dist/maplibre-gl.js'></script>
     <link href='https://unpkg.com/maplibre-gl@latest/dist/maplibre-gl.css' rel='stylesheet' />
-    
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
