--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 </head>
 <body>
 
+<!-- ========================= -->
+<!-- PANTALLA INICIO ESTILO GTA -->
+<!-- ========================= -->
+
 <div id="start-overlay">
     <div id="menu-title">Menú principal</div>
     
@@ -17,17 +21,20 @@
         <svg class="gta-cross" viewBox="0 0 100 100">
             <path d="M50 0 L60 40 L100 50 L60 60 L50 100 L40 60 L0 50 L40 40 Z" fill="#d1e2f3"/>
         </svg>
-        <div class="btn-content">
-            <span class="btn-text">INICIAR PARTIDA</span>
-        </div>
+        <span class="btn-text">INICIAR PARTIDA</span>
     </button>
 </div>
+
+<!-- ========================= -->
+<!-- HUD (NO MODIFICADO) -->
+<!-- ========================= -->
 
 <div id="wrapper">
     <div id="hud">
         <div id="map"></div>
         <svg id="player" viewBox="0 0 34 60">
-            <path d="M17 2 C9 2 3 10 3 18 C3 34 17 58 17 58 C17 58 31 34 31 18 C31 10 25 2 17 2 Z" fill="white" stroke="black" stroke-width="5"/>
+            <path d="M17 2 C9 2 3 10 3 18 C3 34 17 58 17 58 C17 58 31 34 31 18 C31 10 25 2 17 2 Z"
+                  fill="white" stroke="black" stroke-width="5"/>
         </svg>
     </div>
 
@@ -50,4 +57,3 @@
 
 </body>
 </html>
-
