--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="utf-8">
-    <title>GTA SA HUD</title>
+    <title>GPS San Andreas - Definitive Edition</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
     <script src='https://unpkg.com/maplibre-gl@latest/dist/maplibre-gl.js'></script>
     <link href='https://unpkg.com/maplibre-gl@latest/dist/maplibre-gl.css' rel='stylesheet' />
@@ -10,31 +10,15 @@
 </head>
 <body>
 
-<!-- ========================= -->
-<!-- PANTALLA INICIO ESTILO GTA -->
-<!-- ========================= -->
-
 <div id="start-overlay">
-    <div id="menu-title">Menú principal</div>
-    
-    <button id="start-btn">
-        <svg class="gta-cross" viewBox="0 0 100 100">
-            <path d="M50 0 L60 40 L100 50 L60 60 L50 100 L40 60 L0 50 L40 40 Z" fill="#d1e2f3"/>
-        </svg>
-        <span class="btn-text">INICIAR PARTIDA</span>
-    </button>
+    <button id="start-btn"></button>
 </div>
-
-<!-- ========================= -->
-<!-- HUD (NO MODIFICADO) -->
-<!-- ========================= -->
 
 <div id="wrapper">
     <div id="hud">
         <div id="map"></div>
         <svg id="player" viewBox="0 0 34 60">
-            <path d="M17 2 C9 2 3 10 3 18 C3 34 17 58 17 58 C17 58 31 34 31 18 C31 10 25 2 17 2 Z"
-                  fill="white" stroke="black" stroke-width="5"/>
+            <path d="M17 2 C9 2 3 10 3 18 C3 34 17 58 17 58 C17 58 31 34 31 18 C31 10 25 2 17 2 Z" fill="white" stroke="black" stroke-width="5"/>
         </svg>
     </div>
 
