--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="utf-8">
-    <title>GPS San Andreas - Definitive Edition</title>
+    <title>GTA SA HUD</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
     <script src='https://unpkg.com/maplibre-gl@latest/dist/maplibre-gl.js'></script>
     <link href='https://unpkg.com/maplibre-gl@latest/dist/maplibre-gl.css' rel='stylesheet' />
@@ -11,15 +11,16 @@
 <body>
 
 <div id="start-overlay">
-    <div class="menu-container">
-        <h1 id="menu-title">Menú principal</h1>
-        
-        <button id="start-btn">
-            <span class="gta-cross">✦</span>
-            <div class="divider"></div>
+    <div id="menu-title">Menú principal</div>
+    
+    <button id="start-btn">
+        <svg class="gta-cross" viewBox="0 0 100 100">
+            <path d="M50 0 L60 40 L100 50 L60 60 L50 100 L40 60 L0 50 L40 40 Z" fill="#d1e2f3"/>
+        </svg>
+        <div class="btn-content">
             <span class="btn-text">INICIAR PARTIDA</span>
-        </button>
-    </div>
+        </div>
+    </button>
 </div>
 
 <div id="wrapper">
@@ -35,7 +36,7 @@
     </div>
 
     <div id="radio-ui">
-        <img id="station-logo" src="img/RadioOff.png" alt="Logo Radio" style="width:120px">
+        <img id="station-logo" src="img/RadioOff.png" style="width:120px">
         <div id="station-name">RADIO OFF</div>
     </div>
 </div>
@@ -49,3 +50,4 @@
 
 </body>
 </html>
+
